syntax = "proto3";

package task;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
  rpc GetTasksByAuthor (GetTasksByAuthorRequest) returns (GetTasksResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc GetAllTasks (GetAllTasksRequest) returns (GetTasksResponse);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string author = 3;
  string status = 4;
  string authorName = 5;
}

message CreateTaskResponse {
  bool success = 1;
  string message = 2;
  string taskId = 3;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
  string status = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message GetTasksByAuthorRequest {
  string authorId = 1;
}

message GetAllTasksRequest {}

message GetTasksResponse {
  repeated GetTaskResponse tasks = 1;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message UpdateTaskResponse {
  bool success = 1;
  string message = 2;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
  string message = 2;
}

